@startuml

 namespace model {
      abstract class model.Bug {
          # dx : int
          # dy : int
          # height : int
          # images : ArrayList<String>
          # imgIndex : double
          # points : int
          # width : int
          # x : int
          # y : int
          + Bug(x: int, y: int, dx: int, dy: int, direction: Direction)
          + changeDirection(mouseX: int, mouseY: int)
          + changeDirectionBorder()
          + isClicked(x: int, y: int): boolean
          + isInBorderX1(): boolean
          + isInBorderX2(): boolean
          + isInBorderY1(): boolean
          + isInBorderY2(): boolean
          + move(mouseX: int, mouseY: int)
      }
    }
  

  namespace model {
      class model.BugsCreator {
          + createNewButterfly(x: int, y:int, direction: Direction, difficulty: int): Butterfly
          + createNewCockroach(x: int, y:int, direction: Direction, difficulty: int): Cockroach
          + createNewFly(x: int, y:int, direction: Direction, difficulty: int): Fly
          + createNewLadybug(x: int, y:int, direction: Direction, difficulty: int): Ladybug
          + createNewWasp(x: int, y:int, direction: Direction, difficulty: int): Wasp
      }
    }
  

  namespace model {
      class model.Butterfly {
          - scared : boolean
          + Butterfly(x: int, y:int, direction: Direction, difficulty: int)
          + changeDirButterfly(mouseX: int, mouseY: int)
          + changeDirection(mouseX: int, mouseY: int)
      }
    }
  

  namespace model {
      class model.Cockroach {
          + Cockroach(x: int, y:int, direction: Direction, difficulty: int)
      }
    }
  

  namespace model {
      class model.Fly {
          + Fly(x: int, y:int, direction: Direction, difficulty: int)
      }
    }
  

  namespace model {
      class model.GameModel {
          - count : int
          - difficulty : int
          - effectsEnable : boolean
          - highScore : int
          - level : int
          - musicEnable : boolean
          - startTime : long
          - timerLeft : int
          + GameModel(difficulty: int, level: int, musicEnable: boolean, effectsEnable: boolean)
      }
    }
  

  namespace model {
      class model.Ladybug {
          + Ladybug(x: int, y:int, direction: Direction, difficulty: int)
      }
    }
  

  namespace model {
      class model.Wasp {
          + Wasp(x: int, y:int, direction: Direction, difficulty: int)
          + changeDirection(mouseX: int, mouseY: int)
          + changeDirectionBorder()
      }
    }
  

  model.Bug o-- utilities.Direction : direction
  model.Butterfly -up-|> model.Bug
  model.Cockroach -up-|> model.Bug
  model.Fly -up-|> model.Bug
  model.Ladybug -up-|> model.Bug
  model.Wasp -up-|> model.Bug



@enduml
